Add Dockerfile for backend
